gcc/testsuite/rust/rustc/ui/keyword/keyword-false-as-identifier.rs
fn main() {
    let false = 22; // { dg-error ".E0308." "" { target *-*-* } }
}

